Updates local storage state in dark mode script global ofid-main.js and fixed sidebar mobile toggle. Added anti flicker upon the,e switch to every page inside <body>.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4749,7 +4749,7 @@ body {
 
 #intro {
 	color: #ffffff;
-	padding: 8rem 4rem 6rem 4rem;
+	padding: 0rem 4rem 6rem 4rem;
 	-moz-align-items: center;
 	-webkit-align-items: center;
 	-ms-align-items: center;
